crates/murphy-plugin-macros/tests/ui/fail_node_pattern_param_named_without_opts.stderr
error: node_pattern!: pattern uses `%name` runtime parameter(s) but no `opts: <CopOptions struct>` clause was supplied (expected `node_pattern!(name, "pat", opts: MyOpts)`)
 --> tests/ui/fail_node_pattern_param_named_without_opts.rs:4:37
  |
4 | murphy_plugin_macros::node_pattern!(m, "(send _ %method)");
  |                                     ^
